Remove debugging debris